# rvcalc

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  calc.cpp  calc_basic.cpp  entry.sh  main.cpp  test.cpp
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/include/: calc.hpp  calc_factory.hpp  driver.hpp  parser.hpp
include/: calc.hpp  calc_factory.hpp  symbols.hpp  utils.hpp
src/: main.cpp
test/: CMakeLists.txt  calc_test.cpp  main_test.cpp  parser_test.cpp  rvcalctest  test.cpp
test/src/: calc_test.cpp  main_test.cpp
